flux/clusters/studio/infrastructure/flagger/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flagger-system
  labels:
    app.kubernetes.io/name: flagger
    app.kubernetes.io/part-of: flagger
